--- a/.gitignore
+++ b/.gitignore
@@ -364,3 +364,4 @@ FodyWeavers.xsd
 
 #SEMusicStoreAngularStatisticsStart
 #SEMusicStoreAngularStatisticsEnd
+/SEMusicStoreAngularStatistics.AngularApp/.angular/cache/19.2.13/SETemplate.AngularApp/.tsbuildinfo
